<resources>
    <string name="app_name">Skills Ontario</string>
    <string name="sign_in">Sign In</string>
    <string name="txt_continue">Continue</string>
    <string name="notification">Notifications</string>
    <string name="security">Security</string>
    <string name="language">Language</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="license_agreement">License Agreement</string>
    <string name="head_privacy_policy">Privacy Policy</string>
    <string name="options">Options</string>
    <string name="english">English</string>
    <string name="french">Francais</string>
    <string name="spanish">Spanish</string>
    <string name="arabic">Arabic</string>
    <string name="select_language">Select Language</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="username">Username</string>
    <string name="username_email">Username/Email Address</string>
    <string name="password">Enter password.</string>
    <string name="new_to_taxvolt_create_an_account">New to TaxVolt<font color="#1E8755"><b> Create an Account.</b></font>?<sup><font size="11">®</font></sup></string>
    <string name="by_tapping_sign_in_you_agree_to_our">By tapping Sign In, You agree to our</string>
    <string name="underlined_license_agreement"><u>License Agreement</u></string>
    <string name="terms_Of_services"><u>Terms Of Service</u>  </string>
    <string name="underlined_privacy_policy"> <u>Privacy Notice.</u></string>
    <string name="confirm_password">Confirm password.</string>
    <string name="email_address">Enter your email.</string>
    <string name="already_a_taxvolt_sign_in">Already a TaxVolt<font size="11"><sup>®</sup></font>? <font color="#1E8755"><b>Sign In.</b></font></string>
    <string name="msg_charge">Standard call, messaging, or charges may apply.</string>
    <string name="didn_t_receive_the_code_resend_code">Didn\'t receive the code? <font color="#E65555"><b>Resend Code</b></font></string>
    <string name="cancel">Cancel</string>
    <string name="access_my_tax">Access My Taxes</string>
    <string name="forgot_password_msg">Don\'t worry! Enter the email address associated with your account.</string>
    <string name="empty_email">Please enter email address</string>
    <string name="invalid_login_password">Enter a valid password</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Enter a valid new password</string>
    <string name="empty_password">Please enter your password</string>
    <string name="empty_mobile">Please enter phone number</string>
    <string name="invalid_mobile">Please enter valid phone number</string>
    <string name="empty_username">Please enter username</string>
    <string name="invalid_password_match">New password does not match. Please try again.</string>
    <string name="valid_dob">Please enter valid dob</string>
    <string name="blank_first_name_error">First name is required</string>
    <string name="blank_initial_error">Initial is required</string>
    <string name="blank_lastname_error">Last name is required</string>
    <string name="blank_suffix_error">Title is required</string>
    <string name="blank_sin_error">Enter Social insurance number</string>
    <string name="valid_sin_error">Social insurance number is not valid</string>
    <string name="valid_sin_error_occurs">Error occurs please try again latter </string>
    <string name="blank_dob_error">Date of Birth is required</string>
    <string name="provience_error">Province is required.</string>
    <string name="residence_error">Residency Status is required</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="share">Share</string>
    <string name="back">Back</string>
    <string name="start_over">Start Over</string>
    <string name="personal_information">Personal Information</string>
    <string name="begin">Begin</string>
    <string name="filing_status">Filing Status</string>
    <string name="dependents_qualifying_person">Dependents / Qualifying Person</string>
    <string name="primary_first_name">Primary First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="occupation">Occupation</string>
    <string name="are_you_a_canadian_citizen">Are you a Canadian citizen?</string>
    <string name="date_of_birth">Date of Birth<sup><small>*</small></sup></string>
    <string name="date_of_birth_">Date of Birth</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="country">Country<sup><small>*</small></sup></string>
    <string name="address_number_and_street">Address (Number and Street)</string>
    <string name="apartment">Apartment</string>
    <string name="street">Street<sup><small>*</small></sup></string>
    <string name="postal_code">Postal Code<sup><small>*</small></sup></string>
    <string name="city_town_or_post_office">City, Town, or Post Office</string>
    <string name="province">Province<sup><small>*</small></sup></string>
    <string name="please_select">Please Select</string>
    <string name="residency_status">Residency Status<sup><small>*</small></sup></string>
    <string name="residency_status1">Residency Status<sup><small>*</small></sup></string>
    <string name="phone_number">Phone Number</string>
    <string name="mobile_phone_number">Mobile Phone Number</string>
    <string name="msg_secure_msg">Text messaging is the most secure way of ensuring access to your return, also text messaging is the most reliable method for us to contact you regarding your tax return.</string>
    <string name="daytime_telephone_number">Daytime Telephone Number</string>
    <string name="rcv_msg_t_n_c"><![CDATA[I want to receive notifications on my cellular phone, and I agree to the messaging or email Terms & Conditions.]]></string>
    <string name="what_s_your_filing_status">What\'s your filing status?</string>
    <string name="dependent_qualifying_child_information">Dependent/Qualifying Child Information</string>
    <string name="dependent_or_qualifying_child">Dependent or Qualifying Child</string>
    <string name="add_a_dependent_or_qualifying_child"><u>Add a Dependent or Qualifying Child</u></string>
    <string name="dob">DOB</string>
    <string name="ask_me_later">Ask me Later</string>
    <string name="add_benefit">Add Benefit</string>
    <string name="do_you_have_a_financial_advisor">Do you have a Financial Advisor?</string>
    <string name="do_you_have_osap">Do you have Ontario Student Assistance Program(OSAP)?</string>
    <string name="do_you_have_resp_for_your_dependents">Do you have RESP for your dependents?</string>
    <string name="do_you_have_a_life_insurance_policy">Do you have a life insurance policy?</string>
    <string name="basic_information">Basic Information</string>
    <string name="income_slips">Income Slips</string>
    <string name="country_required">Country field required</string>
    <string name="t4_statement_of_remuneration_paid">T4 - Statement of remuneration paid.</string>
    <string name="learn_more">Learn more</string>
    <string name="t5007_msg">T5007 - Workers compensation benefits and social assistance payment.</string>
    <string name="medical_expenses_msg">Medical Expenses</string>
    <string name="charatable_Donations_msg">Charatable Donations</string>
    <string name="on_ben_msg">ON-Ben</string>
    <string name="on_479_msg">ON-479</string>
    <string name="t4e_msg">T4E - Statement of employment insurance and other benefits.</string>
    <string name="t4a_msg">T4A - Statement of pension retirement, annuity and other income.</string>
    <string name="t4a_oas_msg">T4A(OAS) - Statement of old age security.</string>
    <string name="t4rsp_msg">T4RSP - Statement of RRSP income.</string>
    <string name="t4rif_msg">T4RIF - Statement of income from requested retirement income.</string>
    <string name="t4a_p_msg">T4A(P) - Statement of Canada pension plan benefits.</string>
    <string name="quick_file">Quick File</string>
    <string name="quick_file_heading">If you have just a few forms and a simple tax return, try our Quick File method.</string>
    <string name="quick_file_msg_1">• Select the forms you have to enter, and we\'ll take you directly to those forms to complete. You\'ll have an opportunity to review your return and add more information, if needed, before you e-file.</string>
    <string name="quick_file_msg_2">• If your return is a little more complicated, or you\'d rather use a more traditional style of entry, select \"Continue\".</string>
    <string name="money_msg">Tell us about your T4s, interest and dividends, and retirement distributions. Follow our step-by-step guide to ensure accurate entry of your income. Or, enter the information on your own if you\'re familiar with the forms.</string>
    <string name="guide_me">Guide Me</string>
    <string name="enter_myself">Enter Myself</string>
    <string name="t5_msg">T5 - Statement of investment income.</string>
    <string name="t3_msg">T3 - Statement of trust income allocations and designations.</string>
    <string name="t5008_msg">T5008 - Statement of securities transactions.</string>
    <string name="t776_msg">T776 - Statement of rental income and expenses.</string>
    <string name="t777_msg">T777 - Statement of employment expenses.</string>
    <string name="deductions">Deductions</string>
    <string name="credits">Credits</string>
    <string name="calculation_summary">Calculation Summary</string>
    <string name="show_detail">Show Detail</string>
    <string name="tax_and_credits">Tax and Credits</string>
    <string name="total_income">Total Income</string>
    <string name="adjusted_gross_income">Adjusted Gross Income</string>
    <string name="total_tax">Total Payable</string>
    <string name="payments">Payments</string>
    <string name="amount_you_owe">Amount You Owe</string>
    <string name="clear_your_return_and_restart">Clear Your Return and Restart</string>
    <string name="outcome_of_your_tax_return">Outcome of your tax return</string>
    <string name="credit_card_summary_receipt">Credit card summary receipt.</string>
    <string name="account_charges">Account Charges</string>
    <string name="transaction_history">Transaction History</string>
    <string name="receipt">Receipt</string>
    <string name="prepay_filing_fees">Filing Fees</string>
    <string name="prepay_msg">Please pre-pay your filing fee to view or print your return.</string>
    <string name="item_s_included">Item(s) included:</string>
    <string name="how_do_you_want_to_pay_for_your_return">How Do You Want To Pay For Your return?</string>
    <string name="new_account">Create a \nNew Account</string>
    <string name="signup">SIGN UP</string>
    <string name="couldn_t_find_your_email_address">Couldn\'t find your email address</string>
    <string name="reset_your_password">Reset \nyour Password</string>
    <string name="enter_the_email_address_">Enter the email address associated with your account and we will send you a new password.
</string>
    <string name="lbl_g_partner">Government Partners</string>
    <string name="lbl_p_partner">Premium Partners</string>
    <string name="lbl_platinum_partner">Platinum Partners</string>
    <string name="sign_text">Creating an account saves your information and lets you bookmark careers you\'re interested in!</string>
    <string name="by_continuing_you_agree_to_skills_ontario">By continuing, You agree to Skills Ontario </string>
    <string name="and"> and </string>
    <string name="have_an_account">Have an account? </string>
    <string name="sign_in1">Sign\u0020In</string>
    <string name="continue_as_guest">Continue As Guest </string>
</resources>