<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_4sdp">


        <include
            android:id="@+id/action_bar"
            layout="@layout/common_action_bar" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_32sdp"
            android:layout_marginRight="@dimen/_32sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/reset_your_password"
                android:textColor="@color/black"
                android:textSize="40sp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/enter_the_email_address_"
                android:textColor="@color/textColorMid"
                android:textSize="14sp"></TextView>

            <RelativeLayout
                android:id="@+id/rl_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_mail"
                    style="@style/SignUpEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/email_address"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress|textVisiblePassword"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:backgroundTint="@color/buttonColor"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/sign_in"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</layout>