<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_4sdp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:src="@drawable/skills_logo"></ImageView>

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/new_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_26sdp" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/sign_text"
                    android:textAlignment="textStart"
                    android:textColor="@color/black_light"
                    android:textSize="@dimen/_11sdp" />


                <RelativeLayout
                    android:id="@+id/rl_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_mail"
                        style="@style/SignUpEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/email_address"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress|textVisiblePassword"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_email_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_mail"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:drawableLeft="@drawable/ic_error_sign_in"
                    android:drawablePadding="@dimen/_6sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/couldn_t_find_your_email_address"
                    android:textColor="@color/text_error_color"
                    android:textSize="@dimen/_10sdp"
                    android:visibility="gone"></TextView>

                <RelativeLayout
                    android:id="@+id/rl_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        style="@style/SignUpEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <ImageView
                        android:id="@+id/img_eye_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:src="@drawable/ic_close_eye"></ImageView>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_pass_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_mail"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:drawableLeft="@drawable/ic_error_sign_in"
                    android:drawablePadding="@dimen/_6sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/couldn_t_find_your_email_address"
                    android:textColor="@color/text_error_color"
                    android:textSize="@dimen/_10sdp"
                    android:visibility="gone"></TextView>

                <RelativeLayout
                    android:id="@+id/rl_confirm_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_confirm_password"
                        style="@style/SignUpEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <ImageView
                        android:id="@+id/img_eye_confirm_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:src="@drawable/ic_close_eye"></ImageView>

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_confirm_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_mail"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:drawableLeft="@drawable/ic_error_sign_in"
                    android:drawablePadding="@dimen/_6sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/couldn_t_find_your_email_address"
                    android:textColor="@color/text_error_color"
                    android:textSize="@dimen/_10sdp"
                    android:visibility="gone"></TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_verify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_6sdp"
                        android:src="@drawable/ic_not_verified"></ImageView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <me.grantland.widget.AutofitTextView
                            android:id="@+id/tv3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="left"
                            android:singleLine="true"
                            android:text="@string/by_continuing_you_agree_to_skills_ontario"
                            android:textColor="@color/textColorVeryLight"
                            android:textSize="@dimen/_9sdp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_agreement"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:fontFamily="@font/poppins_medium"
                                android:text="@string/terms_Of_services"
                                android:textColor="@color/textColorDark"
                                android:textSize="@dimen/_9sdp" />

                            <TextView
                                android:id="@+id/and"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:fontFamily="@font/poppins_regular"
                                android:gravity="center"
                                android:text="@string/and"
                                android:textColor="@color/textColorVeryLight"
                                android:textSize="@dimen/_9sdp" />

                            <TextView
                                android:id="@+id/tv_privacy"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/poppins_medium"
                                android:text="@string/underlined_privacy_policy"
                                android:textColor="@color/textColorDark"
                                android:textSize="@dimen/_9sdp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:backgroundTint="@color/buttonColor"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:id="@+id/cv_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:text="@string/signup"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/sh"
                        android:layout_width="@dimen/_140sdp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_have_an_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center"
                            android:text="@string/have_an_account"
                            android:textColor="@color/textColorVeryLight"
                            android:textSize="@dimen/_8sdp" />

                        <me.grantland.widget.AutofitTextView
                            android:id="@+id/tv_signIN"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/tv_have_an_account"
                            android:layout_weight="0"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="left"
                            android:singleLine="true"
                            android:text="@string/sign_in1"
                            android:textColor="#49FDA7"
                            android:textSize="@dimen/_8sdp" />

                    </RelativeLayout>

                    <me.grantland.widget.AutofitTextView
                        android:id="@+id/tv_continue_as_guest"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginLeft="@dimen/_4sdp"
                        android:layout_toRightOf="@+id/sh"
                        android:layout_weight="1"
                        android:drawableRight="@drawable/ic_sign_up_arrow"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="end"
                        android:minWidth="@dimen/_100sdp"
                        android:singleLine="true"
                        android:text="@string/continue_as_guest"
                        android:textColor="@color/textColorVeryLight"
                        android:textSize="@dimen/_8sdp" />

                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
